--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@primevue/themes": "^4.0.5",
     "dotenv": "^16.4.5",
     "nuxt": "^3.13.0",
+    "primeicons": "^7.0.0",
     "primevue": "^4.0.5",
     "vue": "latest"
   },
