--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.19.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
