[ADD] Profile page (front), and in the header redirection to all rooms

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.4",
     "@primevue/themes": "^4.0.5",
     "dotenv": "^16.4.5",
     "nuxt": "^3.13.0",
